syntax = "proto3";

package privet;

service JobMaster {
  rpc PopUnits (PopUnitsRequest) returns (PopUnitsResponse) {}
  rpc ReportUnitsCompletion (ReportUnitsCompletionRequest) returns (ReportUnitsCompletionResponse) {}
}

message CommandResult {
  int32 exit_code = 1;
  bytes output = 2;
}

message PopUnitsRequest {
  string runner_id = 1;
  int32 units_requested = 2;
}

message PopUnitsResponse {
  repeated string units = 1;
}

message ReportUnitsCompletionRequest {
  string runner_id = 1;
  string result_id = 2;
  repeated string units = 3;
  CommandResult unit_result = 4;
  bool additional_result_present = 5;
  CommandResult additional_result = 6;
}

message ReportUnitsCompletionResponse {
}